test fixing images at dark mode

--- a/docs_website/src/css/custom.css
+++ b/docs_website/src/css/custom.css
@@ -14,7 +14,13 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
+  --svg-fill-color: #2a2021; /* Black fill for light mode */
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+}
+
+/* Dark mode styles */
+html[data-theme="dark"] {
+  --svg-fill-color: #fff; /* White fill for dark mode */
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -26,6 +32,11 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --svg-fill-color: #fff; /* White fill for dark mode */
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+img.svg-icon {
+  fill: var(--svg-fill-color); /* Apply the color variable */
 }
 
